--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://elwizard33.github.io/telegram-mini-app/",
+    "url": "https://wallet.elwizard.net",
     "name": "TMA Wallet PoC",
     "iconUrl": "https://ton.vote/logo.png"
 }
