--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.22.3",
         "react-spinners": "^0.13.8",
+        "styled-components": "^6.1.11",
         "webpack-cli": "^5.1.4"
     },
     "devDependencies": {
